--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Is your Birthday Lucky 🤔</h1>
+    <div class="container">
+        <label for="date-of-birth">Date Of Birth :</label>
+        <input type="date" id="date-of-birth">
+        <label for="lucky-number">Lucky Number :-</label>
+        <input type="number" id="lucky-number">
+        <button id="check">Check</button>
+        <p id="message"></p>
+    </div>
+
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
