style : border and color

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Is your Birthday Lucky 🤔</h1>
     <div class="container">
         <label for="date-of-birth">Date Of Birth :</label>
-        <input type="date" id="date-of-birth">
+        <input class="working" type="date" id="date-of-birth">
         <label for="lucky-number">Lucky Number :-</label>
-        <input type="number" id="lucky-number">
-        <button id="check">Check</button>
+        <input class="working" type="number" id="lucky-number">
+        <button class="working" id="check">Check</button>
         <p id="message"></p>
     </div>
 
