--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Is your Birthday Lucky 🤔</h1>
+    <p id="header">Is your Birthday Lucky 🤔</p>
     <div class="container">
         <label for="date-of-birth">Date Of Birth :</label>
         <input class="working" type="date" id="date-of-birth">
