--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <label for="date-of-birth">Date Of Birth :</label>
         <input class="working" type="date" id="date-of-birth">
-        <label for="lucky-number">Lucky Number :-</label>
+        <label for="lucky-number">Lucky Number :</label>
         <input class="working" type="number" id="lucky-number">
         <button class="working" id="check">Check</button>
         <p id="message"></p>
