style : label and message

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <p id="header">Is your Birthday Lucky 🤔</p>
     <div class="container">
-        <label for="date-of-birth">Date Of Birth :</label>
+        <label class="label-class" for="date-of-birth">Date Of Birth :</label>
         <input class="working" type="date" id="date-of-birth">
-        <label for="lucky-number">Lucky Number :</label>
+        <label class="label-class" for="lucky-number">Lucky Number :</label>
         <input class="working" type="number" id="lucky-number">
         <button class="working" id="check">Check</button>
         <p id="message"></p>
