--- a/index.html
+++ b/index.html
@@ -16,8 +16,25 @@
         <input class="working" type="number" id="lucky-number">
         <button class="working" id="check">Check</button>
         <p id="message"></p>
+        <h2>Privacy Notice :- </h2>
+        <h3>We are not storing your data</h3>
     </div>
-
     <script src="app.js" type="text/javascript"></script>
+    <footer>
+        <h2>
+          Links To My Social Media
+        </h2>
+        <ul>
+          <li class="list-inline">
+            <a class="link" href="https://github.com/mehul-anand">Github</a>
+          </li>
+          <li class="list-inline">
+            <a class="link" href="https://www.linkedin.com/in/mehul-anand-a82540222/">LinkedIn</a>
+          </li>
+        </ul>
+      </footer>
+      
+    </body> 
+    </html>
 </body>
 </html>
